# expresso-calib

./: .gitignore  README.md  pyproject.toml
.codex/: README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-16-calibration-core-refactor.md  2026-05-16-frontend-and-housekeeping.md  2026-05-16-runtime-and-concurrency.md
src/expresso_calib/: __init__.py  board.py  calibration.py  calibration_worker.py  camera_pipeline.py  detection.py  filters.py  multi_camera.py  reference.py  reports.py  server.py  sources.py
src/expresso_calib/web/: operator.html  operator.js  styles.css  target.html  target.js
tests/: test_board_detection.py  test_calibration_accumulator.py  test_camera_pipeline.py  test_filters.py  test_multi_camera.py
tools/: codex-launch-server.ps1
tools/macos-camera-bridge/: ExpressoCameraBridge.swift
tools/macos-camera-bridge/ExpressoCameraBridge.app/Contents/: Info.plist
tools/macos-camera-bridge/ExpressoCameraBridge.app/Contents/MacOS/: ExpressoCameraBridge
tools/macos-camera-intrinsic-probe/: CameraIntrinsicProbe.swift
tools/macos-camera-intrinsic-probe/CameraIntrinsicProbe.app/Contents/: Info.plist
tools/macos-camera-intrinsic-probe/CameraIntrinsicProbe.app/Contents/MacOS/: CameraIntrinsicProbe
