[project]
name = "expresso-calib"
version = "0.1.0"
description = "Live ChaRuCo intrinsic calibration station for robot camera development."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26",
  "opencv-contrib-python>=4.8,<5",
  "pillow>=10",
  "python-multipart>=0.0.9",
  "qrcode>=7.4",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
expresso-calib = "expresso_calib.server:main"

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expresso_calib"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".claude", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
